# FuzzyChess

./: .gitignore  README.md  pyproject.toml  requirements.txt  uci_wrapper.py
data/luts/: center_lut.npy  safety_lut.npy
notebooks/: 01_basic_center_fis.ipynb  02_basic_king_safety_fis.ipynb  03_basic_pawn_fis.ipynb  04_basic_mobility_fis.ipynb
notebooks/board_evaluation/: board_evaluation.ipynb
notebooks/fis_design/: 03_basic_pawn_fis copy.ipynb  04_basic_mobility_fis.ipynb  05_promotion_chances_fis.ipynb
scripts/: extract_fis_inputs.py  search_performance_testing.py  visualize_model.py
scripts/data_extraction/: extract_fis_inputs.py  quiet_position_extraction.py
scripts/experiments/: search_performance_testing.py  visualize_model.py
scripts/training/: tapered_training.py  utils.py
src/: engine.py  evaluation.py  evaluation_v2.py  evaluator.py  model_visualization.py  tapered_evaluator.py  tapered_training.py  training.py  training_v2.py  utils.py
src/bot/: board_evaluation.py  choose_move.py  search.py  searcher.py
src/features/: extractors.py  extractors_board.py  extractors_cache.py  utils.py
src/features/fis/: base.py  center_control.py  king_safety.py  mobility.py  pawn_structure.py  promotion.py
src/fuzzychess/: config.py
src/fuzzychess/bot/: factory.py
src/fuzzychess/evaluation/: basic_evaluation.py  engine.py  evaluator.py  tapered.py
src/fuzzychess/explainability/: explainer.py  explaining_searcher.py
src/tapered_bot/: load_bot.py
tests/: conftest.py  positions.py  test_extractors.py  test_pawn_structure.py  test_search.py
(+15 files in other folders)
